--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-  <link rel="stylesheet" href="./TUT.css">
+  <link rel="stylesheet" href="src/TUT.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/css?family=Pontano+Sans|Righteous" rel="stylesheet">
   <title>Teamup Travel | Find Friends and Get Lost</title>
 </head>
