--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json"> -->
   <link rel="stylesheet" href="src/TUT.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css"> 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
